# Timetable-Generator-Using-Agentic-AI

./: .env.example  .gitignore  AUTHENTICATION.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  commands.md  deploy-with-auth.sh  deploy.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  timetable.csv  updates.md
agents/: __init__.py  base_agent.py  constraint_agent.py  timetable_agent.py
config/: settings.py
data/: classrooms.csv  faculty.csv  sections.csv  subjects.csv
models/: __init__.py
sample_data/: classrooms.csv  faculty.csv  sections.csv  subjects.csv
services/: __init__.py  firebase_auth.py  gemini_service.py
static/: app.js  auth.css  auth.js  firebase-config.js  index.html  styles.css
